formatting changes to bios and another mackenzie update

--- a/attorneys.html
+++ b/attorneys.html
@@ -141,16 +141,16 @@
           data-aos-delay="150"
         >
           <p>
-            <span
+            <!-- <span
               class="first-line"
               style="font-size: 26px; font-weight: bold; color: var(--c-dark)"
-            >
-              Sarah represents clients in sophisticated Family Law matters
-              involving high-asset marital estates, complex property and
-              business valuations, challenging income analyses, significant
-              parenting disputes, and the negotiation and litigation of
-              prenuptial and postnuptial agreements.
-            </span>
+            > -->
+            Sarah represents clients in sophisticated Family Law matters
+            involving high-asset marital estates, complex property and business
+            valuations, challenging income analyses, significant parenting
+            disputes, and the negotiation and litigation of prenuptial and
+            postnuptial agreements.
+            <!-- </span> -->
             While she is highly skilled in navigating complicated legal and
             financial issues, Sarah brings the same level of dedication and care
             to every case—no matter its size or complexity.
@@ -161,34 +161,28 @@
             each stage of their case with clarity and purpose. She prioritizes
             helping clients make informed, carefully considered decisions and is
             adept at managing even the most difficult family-law conflicts.
-            <strong>
-              Because resolution looks different for every client, Sarah takes
-              the time to listen deeply, understand their needs and goals, and
-              develop a personalized, outcome-focused strategy.
-            </strong>
-            She encourages out-of-court settlement whenever possible and is
-            known for her ability to work collaboratively with clients and
-            opposing counsel to craft creative, forward-thinking solutions.
+            Because resolution looks different for every client, Sarah takes the
+            time to listen deeply, understand their needs and goals, and develop
+            a personalized, outcome-focused strategy. She encourages
+            out-of-court settlement whenever possible and is known for her
+            ability to work collaboratively with clients and opposing counsel to
+            craft creative, forward-thinking solutions.
           </p>
 
           <p>
             Since transitioning from government service, Sarah has dedicated her
-            practice exclusively to Family Law.
-            <strong>
-              Her breadth of experience, litigation skill, and client- centered
-              approach enable her to guide clients through some of the most
-              personal and impactful challenges of their lives.
-            </strong>
+            practice exclusively to Family Law. Her breadth of experience,
+            litigation skill, and client-centered approach enable her to guide
+            clients through some of the most personal and impactful challenges
+            of their lives.
           </p>
 
           <p>
-            <strong
-              >At Neiley &amp; Morris, we understand that family relationships
-              form the foundation of individual well-being and long-term
-              success. With this in mind, we devote ourselves fully to our
-              clients and deliver legal services rooted in excellence,
-              integrity, and unwavering commitment.</strong
-            >
+            At Neiley &amp; Morris, we understand that family relationships form
+            the foundation of individual well-being and long-term success. With
+            this in mind, we devote ourselves fully to our clients and deliver
+            legal services rooted in excellence, integrity, and unwavering
+            commitment.
           </p>
 
           <div class="dets-row">
@@ -276,78 +270,65 @@
           data-aos-delay="150"
         >
           <p>
-            <span
+            <!-- <span
               class="first-line"
               style="font-size: 26px; font-weight: bold; color: var(--c-dark)"
-            >
-              Mackenzie Morris is a Criminal Defense and Family Law Attorney at
-              Neiley &amp; Morris,
-            </span>
-            bringing an extensive background in defense-focused litigation and
+            > -->
+
+            Mackenzie Morris is a Criminal Defense and Family Law Attorney at
+            Neiley & Morris, bringing an extensive background in litigation and
             client-centered representation.
+            <!-- </span> -->
           </p>
 
           <p>
-            Mackenzie began her legal career working with a team of attorneys
-            representing one of three inmates on Colorado’s death row. This
-            experience sparked her
-            <strong>
-              deep commitment to defending the constitutional rights of the
-              accused.
-            </strong>
-            She later became a Deputy Public Defender for the State of Colorado,
-            where she represented thousands of individuals facing charges
-            ranging from serious felonies—such as attempted homicide and sexual
-            assault—to misdemeanors including DUIs, domestic violence, and
-            property crimes. Mackenzie has conducted more than a dozen felony
-            and misdemeanor trials and over 60 evidentiary hearings.
+            Mackenzie began her legal career on the defense team for one of
+            three inmates on Colorado’s death row—an experience that sparked her
+            deep commitment to protecting constitutional rights of the accused
+            and challenging government misconduct. Mackenzie later went on to
+            become a Deputy Public Defender for the State of Colorado,
+            representing thousands of clients facing charges ranging from
+            serious felonies, including attempted homicide and sexual assault,
+            to misdemeanors such as DUIs, domestic violence, and property
+            crimes. She has defended clients in more than 70 felony and
+            misdemeanor trials and evidentiary hearings statewide.
           </p>
 
           <p>
-            Mackenzie’s courtroom experience and deep understanding of criminal
-            law make her a relentless advocate, skilled in cross-examining
-            witnesses, litigating the suppression of illegally obtained
-            evidence, and engaging in strategic negotiations with the
-            government. She is frequently recognized for her
-            <strong>
-              ability to build trusting client relationships and deliver clear,
-              candid guidance that helps clients make informed decisions and
-              safeguard their futures throughout the legal process.
-            </strong>
+            After transitioning into private practice, Mackenzie expanded her
+            work into family law, representing clients in divorce and
+            parenting-rights matters. Her practice focuses on achieving fair,
+            efficient settlements that ease the emotional and financial burdens
+            of family conflict. Mackenzie is skilled at formulating thoughtful
+            and creative solutions—particularly in high-conflict and high-asset
+            cases—that enable her clients to move forward with stability and
+            confidence.
 
             <br />
           </p>
 
           <p>
-            After leaving the Public Defender’s Office and entering private
-            practice, Mackenzie expanded her work into family law, representing
-            clients in divorce and parenting-rights matters. Drawing on her
-            experience guiding individuals through life-altering situations, she
-            is adept at handling high-asset divorces, crafting creative
-            settlements in complex financial cases, and assisting families in
-            developing parenting plans that meet their needs. Mackenzie’s
-            family-law practice is
-            <strong>
-              resolution- focused, dedicated to achieving efficient and fair
-              settlements that reduce the emotional and financial strain of
-              family disputes and help clients move forward with confidence and
-              stability.
-            </strong>
+            Mackenzie’s litigation background makes her a relentless advocate
+            across both criminal and family law, and she approaches each case
+            with her clients’ individual interests at the forefront. Mackenzie
+            is consistently praised by her clients for building trusting
+            relationships and providing clear, honest communication that
+            empowers her clients to make informed decisions at every stage of
+            the legal process.
           </p>
           <p>
             Mackenzie earned her Juris Doctor from the University of Denver,
             where she received the Outstanding Student Attorney in Criminal
-            Defense Award from its nationally ranked criminal defense clinic;
-            the Reece Persuasive Writing Award for authoring the top appellate
-            brief in her class; and the Public Good Distinction Award for her
-            dedication to community service. She holds a B.A. in Political
-            Science and International Studies from the University of Colorado
-            and worked in legislation prior to attending law school.
+            Defense Award, the Reece Persuasive Writing Award, and the Public
+            Good Distinction Award. She holds a B.A. in Political Science and
+            International Studies from the University of Colorado. Before law
+            school, Mackenzie worked in legislation, giving her a unique
+            perspective on the intricacies and philosophy of the legal system.
           </p>
           <p>
-            Outside of her practice, Mackenzie is an avid outdoor enthusiast who
-            enjoys backpacking, fishing, mountain biking, and snowboarding with
-            her family.
+            Outside the office and courtroom, Mackenzie is an avid outdoors
+            enthusiast who enjoys backpacking, fishing, mountain biking, and
+            snowboarding.
           </p>
           <div
             class="dets-row"
@@ -522,19 +503,17 @@
           data-aos-delay="150"
         >
           <p>
-            <span
+            <!-- <span
               class="first-line"
               style="font-size: 26px; font-weight: bold; color: var(--c-dark)"
-            >
-              Megan brings a unique perspective
-            </span>
+            > -->
+            Megan brings a unique perspective
+            <!-- </span> -->
             to criminal defense and family law, shaped by experience on both
-            sides of the courtroom.
-            <strong>
-              With a background that includes prosecution, judicial clerkship,
-              and years of defense advocacy, she understands how the legal
-              system works—and how to navigate it effectively for clients.
-            </strong>
+            sides of the courtroom. With a background that includes prosecution,
+            judicial clerkship, and years of defense advocacy, she understands
+            how the legal system works—and how to navigate it effectively for
+            clients.
           </p>
           <p>
             After law school, Megan clerked for a District Court Judge,
@@ -561,11 +540,9 @@
             dissolving marriages involving significant assets.
           </p>
           <p>
-            Now at Neiley &amp; Morris,<span>
-              Megan represents her clients with both courtroom strength and
-              negotiation expertise, always focused on protecting their rights
-              and achieving the best possible outcome.
-            </span>
+            Now at Neiley &amp; Morris, Megan represents her clients with both
+            courtroom strength and negotiation expertise, always focused on
+            protecting their rights and achieving the best possible outcome.
           </p>
           <p>
             Megan holds a BA in Biology and Psychology from the University of
@@ -675,13 +652,13 @@
           data-aos-delay="150"
         >
           <p>
-            <span
+            <!-- <span
               style="font-size: 26px; font-weight: bold; color: var(--c-dark)"
               class="first-line"
-            >
-              Mary Ann is one of the firm’s paralegals in both Family Law and
-              Criminal Defense matters.
-            </span>
+            > -->
+            Mary Ann is one of the firm’s paralegals in both Family Law and
+            Criminal Defense matters.
+            <!-- </span> -->
             She also provides administrative support to the firm and clients.
             Mary Ann is integral to our Legal Team and the detail-oriented
             advocacy and representation that our clients receive. Not only is
@@ -721,24 +698,21 @@
           data-aos-delay="150"
         >
           <p>
-            <span
+            <!-- <span
               style="font-size: 26px; font-weight: bold; color: var(--c-dark)"
-            >
-              Sydney is one of the firm&#39;s paralegals, specializing in Family
-              Law matters.
-            </span>
+            > -->
+            Sydney is one of the firm&#39;s paralegals, specializing in Family
+            Law matters.
+            <!-- </span> -->
             Prior to joining Neiley &amp; Morris, Sydney worked as a high school
             social studies teacher and as a paralegal in civil litigation &amp;
             employment law. In her past paralegal experiences, Sydney assisted
             clients through complex breach of contract, intellectual property,
             and wrongful termination of employment lawsuits. Through these
-            experiences,
-            <strong>
-              she has honed her communication skills, organization, and
-              attention to detail—these strengths serve her well in helping
-              clients navigate the emotional and financial complexities of
-              family law matters.
-            </strong>
+            experiences, she has honed her communication skills, organization,
+            and attention to detail—these strengths serve her well in helping
+            clients navigate the emotional and financial complexities of family
+            law matters.
           </p>
           <p>
             Prior to living in the Roaring Fork Valley, Sydney lived in
@@ -751,12 +725,10 @@
           </p>
           <p>
             Sydney understands people are most often experiencing challenging
-            times when they approach a law firm for assistance, so
-            <strong>
-              Sydney approaches each client at Neiley &amp; Morris with the goal
-              of establishing a trusting relationship and providing compassion,
-              patience, empathy at all stages of a case.</strong
-            >
+            times when they approach a law firm for assistance, so Sydney
+            approaches each client at Neiley &amp; Morris with the goal of
+            establishing a trusting relationship and providing compassion,
+            patience, empathy at all stages of a case.
           </p>
         </div>
       </div>
