--- a/attorneys.html
+++ b/attorneys.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>NEILEY & MORRIS</title>
-    <link rel="icon" href="./assets/images/favi24.ico" />
+    <link rel="icon" href="./assets/images/favi24-2.ico" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css
