update meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      property="og:image"
+      content="https://neileymorris.com/assets/images/About3.jpg"
+    />
+    <meta property="og:title" content="NEILEY & MORRIS" />
+    <meta
+      property="og:description"
+      content="Neiley & Morris is a boutique law firm representing clients in matters of Family Law and Criminal Defense. We provide a team of attorneys and staff who has extensive trial, evidentiary, and negotiation experience. Clients of Neiley & Morris receive reasoned legal advice and zealous advocacy as we help them navigate complex and difficult legal matters."
+    />
     <title>NEILEY & MORRIS</title>
     <link
       rel="icon"
