--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
 
       gtag("config", "AW-17722687269");
     </script>
+    <!-- Event snippet for Contact conversion page -->
+    <script>
+      gtag("event", "conversion", {
+        send_to: "AW-17722687269/1ParCL-lpdUbEKX-6oJC",
+      });
+    </script>
   </head>
   <body data-spy="scroll" data-target=".navbar">
     <!-- navbar -->
