--- a/privacy.html
+++ b/privacy.html
@@ -93,98 +93,80 @@
 
     <!-- policy
        -->
-    <section id="privacy" class="section-padding">
-      <p>
-        This privacy policy explains how Neiley &amp; Morris, LLC (“the Firm”)
-        collects, uses and discloses information about you when you use our
-        websites, mobile applications, and other online services. If you have
-        any questions about this privacy policy, please contact the Firm
-        directly.
-      </p>
-      <p>
-        <strong>Data collection and cookies.</strong> Features or partners of
-        this website may collect data including, but not limited to: the number
-        of visitors to the site, the time spent on the site and pages clicked,
-        the types of devices used to access the site, and the Internet Protocol
-        (IP) addresses of visitors. The Firm uses this information to improve
-        this website and the Firm&#39;s marketing efforts. This data is
-        collected by sending cookies (or similar tracking technology) to your
-        device. Information such as your name or email address generally is not
-        collected via these cookies and other tracking technology; if you
-        previously provided such personally identifiable information through
-        this website, however, cookies may be tied to such information.
-        Aggregate cookie and tracking information may be shared with third
-        parties; and this privacy policy does not cover third parties’ use of
-        cookies. You may configure your device to limit or prevent access by
-        cookies, such as to notify you when you receive a cookie, to block all
-        cookies, or to delete existing cookies.
-      </p>
-      <p>
-        <strong>Partners and features that collect information.</strong> The
-        Firm&#39;s website marketing partners or features that collect data as
-        described above may include, among others, Google Analytics, other
-        analytics programs, and Google AdWords remarketing service. Remarketing
-        involves tracking devices that have visited this website in order to
-        display ads for the Firm&#39;s services on other websites. Use these
-        links to learn
-        <a href="https://policies.google.com/technologies/partner-sites">
-          how Google uses data it collects</a
-        >, to
-        <a href="https://tools.google.com/dlpage/gaoptout/"
-          >prevent Google Analytics from using data from your device</a
-        >, or to
-        <a
-          href="https://support.google.com/My-Ad-Center-Help/answer/12155764?hl=en&visit_id=639003167930224520-2059694156&rd=1"
-        >
-          opt out of Google’s interest-based ads.
-        </a>
-      </p>
-      <p>
-        By using this Website, you consent to the collection and use of
-        information as specified above. Any Privacy Policy updates will be
-        posted on this page
-      </p>
-      <p>OR</p>
-      <p>
-        <strong>Information Collection, Sharing and Use.</strong> The Firm is
-        the sole owner of the information collected by its website. The Firm
-        only has access to the information that you voluntarily provide to us.
-        The Firm will not rent, sell or disseminate this information to anyone.
-        The Firm uses the information provided to us through the website to
-        respond to you regarding the reason you contacted the Firm. The Firm
-        will distribute the information internally only to the correct person at
-        our firm that can address your issue. SLH will not share your
-        information with any third party.
-      </p>
-      <p>
-        <strong>Information Access &amp; Control.</strong> Although we employ
-        reasonable security measures, the transmission of information via the
-        internet is not completely secure or private. If you have any questions
-        about the security of personal information we collect, please contact
-        the Firm directly.
-      </p>
-      <p>
-        <strong>SMS Messaging.</strong> The Firm offers clients the choice to
-        opt in to receive text messages related to your case, appointments, and
-        Firm services. The Firm does not require its clients to use this
-        service, and such service will only be offered to clients through
-        attorney assigned to your matter based on your case needs. Clients who
-        opt into SMS messaging may opt out at any time by texting “STOP” or by
-        contacting our office by phone or email. The Firm does not share phone
-        numbers with anyone. Message and data rates may apply.
-      </p>
-      <p>
-        <strong> External Links. </strong>This website may contain links to
-        other websites. The Firm is not responsible for the content or privacy
-        policies of other websites to which it links.
-      </p>
-      <p>
-        <strong> Changes to this policy.</strong> The Firm may update this
-        policy. If updates are made, the Firm will change the modification date
-        below.
-      </p>
-      <p><strong>Last modified.</strong> November 2025</p>
-    </section>
+ <section id="privacy" class="section-padding">
+  <p>
+    This privacy policy explains how Neiley &amp; Morris, LLC ("the Firm")
+    collects, uses and discloses information about you when you use our
+    websites, mobile applications, and other online services. If you have
+    any questions about this privacy policy, please contact the Firm
+    directly.
+  </p>
+  <p>
+    <strong>Data Collection and Cookies.</strong> Features or partners of
+    this website may collect data including, but not limited to: the number
+    of visitors to the site, the time spent on the site and pages clicked,
+    the types of devices used to access the site, and the Internet Protocol
+    (IP) addresses of visitors. The Firm uses this information to improve
+    this website and the Firm's marketing efforts. This data is collected
+    by sending cookies (or similar tracking technology) to your device.
+    Information such as your name or email address generally is not
+    collected via these cookies and other tracking technology; if you
+    previously provided such personally identifiable information through
+    this website, however, cookies may be tied to such information.
+    Aggregate cookie and tracking information may be shared with third
+    parties; and this privacy policy does not cover third parties' use of
+    cookies. You may configure your device to limit or prevent access by
+    cookies, such as to notify you when you receive a cookie, to block all
+    cookies, or to delete existing cookies.
+  </p>
+  <p>
+    <strong>Partners and Features That Collect Information.</strong> The
+    Firm's website marketing partners or features that collect data as
+    described above may include, among others, Google Analytics, other
+    analytics programs, and Google AdWords remarketing service. Remarketing
+    involves tracking devices that have visited this website in order to
+    display ads for the Firm's services on other websites. Use these links
+    to learn
+    <a href="https://policies.google.com/technologies/partner-sites"
+      >how Google uses data it collects</a
+    >, to
+    <a href="https://tools.google.com/dlpage/gaoptout/"
+      >prevent Google Analytics from using data from your device</a
+    >, or to
+    
+      href="https://support.google.com/My-Ad-Center-Help/answer/12155764?hl=en&visit_id=639003167930224520-2059694156&rd=1"
+      >opt out of Google's interest-based ads</a
+    >.
+  </p>
+  <p>
+    <strong>Contact Form Submissions.</strong> Information you voluntarily
+    provide through our website contact forms (such as your name, email,
+    phone number, and message) is used solely to respond to your inquiry
+    and will not be sold or shared with third parties.
+  </p>
+  <p>
+    <strong>SMS Messaging.</strong> The Firm may offer clients the option
+    to receive text messages related to case updates, appointment
+    reminders, and Firm services. By opting in, you consent to receive
+    these messages at the phone number provided. Message frequency varies
+    based on case activity. Clients may opt out at any time by replying
+    "STOP" to any message or by contacting the Firm by phone or email.
+    Opting out of SMS will not affect your ability to receive legal
+    services. Message and data rates may apply. Phone numbers will not be
+    sold or shared with third parties.
+  </p>
+  <p>
+    <strong>External Links.</strong> This website may contain links to
+    other websites. The Firm is not responsible for the content or privacy
+    policies of other websites to which it links.
+  </p>
+  <p>
+    <strong>Changes to This Policy.</strong> The Firm may update this
+    policy. If updates are made, the Firm will change the modification date
+    below.
+  </p>
+  <p><strong>Last Modified.</strong> January 2026</p>
+</section>
 
     <!-- footer -->
     <footer class="footer-cont">
