--- a/attorneys.html
+++ b/attorneys.html
@@ -164,8 +164,7 @@
             Sarah represents clients in sophisticated Family Law matters
             involving high-asset marital estates, complex property and business
             valuations, challenging income analyses, significant parenting
-            disputes, and the negotiation and litigation of prenuptial and
-            postnuptial agreements.
+            disputes, and litigation of prenuptial and postnuptial agreements.
             <!-- </span> -->
             While she is highly skilled in navigating complicated legal and
             financial issues, Sarah brings the same level of dedication and care
