--- a/attorneys.html
+++ b/attorneys.html
@@ -176,20 +176,20 @@
             each stage of their case with clarity and purpose. She prioritizes
             helping clients make informed, carefully considered decisions and is
             adept at managing even the most difficult family-law conflicts.
-            Because resolution looks different for every client, Sarah takes the
-            time to listen deeply, understand their needs and goals, and develop
-            a personalized, outcome-focused strategy. She encourages
+             Because resolution looks different for every client, Sarah takes
+            the time to listen deeply, understand each client’s needs and goals,
+            and develop a personalized, outcome-focused strategy. She encourages
             out-of-court settlement whenever possible and is known for her
             ability to work collaboratively with clients and opposing counsel to
             craft creative, forward-thinking solutions.
           </p>
 
           <p>
-            Since transitioning from government service, Sarah has dedicated her
-            practice exclusively to Family Law. Her breadth of experience,
-            litigation skill, and client-centered approach enable her to guide
-            clients through some of the most personal and impactful challenges
-            of their lives.
+            Since transitioning from government service as a criminal
+            prosecutor, Sarah has dedicated her practice exclusively to Family
+            Law. Her breadth of experience, litigation skill, and
+            client-centered approach enable her to guide clients through some of
+            the most personal and impactful challenges of their lives.
           </p>
 
           <p>
