--- a/attorneys.html
+++ b/attorneys.html
@@ -731,7 +731,7 @@
           </p>
           <p>
             Prior to living in the Roaring Fork Valley, Sydney lived in
-            Minnesota where she co-founded a non- profit called the Winona
+            Minnesota where she co-founded a non-profit called the Winona
             Outdoor Collaborative that focused on reducing barriers to the
             outdoors by offering free monthly events, with all equipment and
             instruction provided for various outdoor sports. This experience
@@ -741,9 +741,9 @@
           <p>
             Sydney understands people are most often experiencing challenging
             times when they approach a law firm for assistance, so Sydney
-            approaches each client at Neiley &amp; Morris with the goal of
+            approaches each client at Neiley & Morris with the goal of
             establishing a trusting relationship and providing compassion,
-            patience, empathy at all stages of a case.
+            patience, and empathy at all stages of a case.
           </p>
         </div>
       </div>
