added rifle to footer

--- a/attorneys.html
+++ b/attorneys.html
@@ -743,7 +743,7 @@
             times when they approach a law firm for assistance, so Sydney
             approaches each client at Neiley & Morris with the goal of
             establishing a trusting relationship and providing compassion,
-            patience, and empathy at all stages of a case.
+            patience, and empathy at all stages of a case.
           </p>
         </div>
       </div>
@@ -825,6 +825,9 @@
                 <li>-</li>
                 <li>119A Colorado Ave</li>
                 <li>Telluride, CO 81435</li>
+                <li>-</li>
+                <li>111 East Third Street, Unit 219</li>
+                <li>Rifle, CO 81650</li>
                 <li>-</li>
                 <li>970-963-6363</li>
                 <li>office@neileymorris.com</li>
