--- a/index.html
+++ b/index.html
@@ -1320,6 +1320,9 @@
                 <li>119A Colorado Ave</li>
                 <li>Telluride, CO 81435</li>
                 <li>-</li>
+                <li>111 East Third Street, Unit 219</li>
+                <li>Rifle, CO 81650</li>
+                <li>-</li>
                 <li>970-963-6363</li>
                 <li>office@neileymorris.com</li>
                 <li>www.neileymorris.com</li>
