locations and zoe

--- a/attorneys.html
+++ b/attorneys.html
@@ -624,6 +624,33 @@
           </div> -->
         </div>
 
+        <!-- zoe -->
+
+        <div id="zoe" class="row lawyer" style="margin-top: 75px">
+          <div class="lawyer-span" data-aos="fade-down" data-aos-delay="150">
+            <div class="speaker image-zoom">
+              <div>
+                <picture>
+                  <source
+                    media="(max-width: 799px)"
+                    srcset="./assets/images/shortspan-zoe.png"
+                  />
+                  <img src="./assets/images/zoe-span.jpg" alt="Zoe Span" />
+                </picture>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div
+          id="zoe-bio"
+          class="row lawyer bio g-4"
+          data-aos="fade-down"
+          data-aos-delay="150"
+        >
+          <p>Coming soon.</p>
+        </div>
+
         <!-- header -->
 
         <div class="row" style="margin-top: 50px">
