--- a/index.html
+++ b/index.html
@@ -323,26 +323,6 @@
             </div>
           </div>
 
-          <!-- <div class="col-md-3" data-aos="fade-down" data-aos-delay="350">
-            <div class="speaker image-zoom zoe">
-              <div class="image-zoom-wrapper">
-                <a href="./attorneys.html#zoe">
-                  <img
-                    src="./assets/images/zoe1.jpg"
-                    style="transform: scale(1.2)"
-                  />
-                </a>
-              </div>
-              <div class="speaker-content">
-                <h4>Read More About</h4>
-                <h4 class="hover-name">Zoe M. Dotson</h4>
-              </div>
-            </div>
-            <div class="name-box">
-              <h4>Zoe M. Dotson</h4>
-              <h4 class="mb-0 role">Paralegal</h4>
-            </div>
-          </div> -->
           <!-- Megan -->
           <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom mack">
@@ -413,7 +393,7 @@
             </div>
           </div>
 
-          <!-- <div class="col-md-3" data-aos="fade-down" data-aos-delay="350">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
             <div class="speaker image-zoom zoe">
               <div class="image-zoom-wrapper">
                 <a href="./attorneys.html#zoe">
@@ -430,9 +410,9 @@
             </div>
             <div class="name-box">
               <h4>Zoe M. Dotson</h4>
-              <h4 class="mb-0 role">Paralegal</h4>
+              <h4 class="mb-0 role">Licensed Legal Paraprofessional</h4>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </section>
@@ -685,7 +665,7 @@
         </div>
         <div class="row g-4 justify-content-center">
           <!-- Carbondale Office -->
-          <div class="col-md-6" data-aos="fade-down" data-aos-delay="150">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
             <div class="card h-100 shadow-sm">
               <div class="ratio ratio-4x3">
                 <iframe
@@ -713,7 +693,7 @@
             </div>
           </div>
           <!-- Telluride Office -->
-          <div class="col-md-6" data-aos="fade-down" data-aos-delay="250">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
             <div class="card h-100 shadow-sm">
               <div class="ratio ratio-4x3">
                 <iframe
@@ -733,6 +713,34 @@
                 </p>
                 <a
                   href="https://maps.google.com/?q=119A+West+Colorado+Avenue+Telluride+CO+81435"
+                  target="_blank"
+                  class="btn btn-outline-primary get-directions-btn"
+                  >Get Directions</a
+                >
+              </div>
+            </div>
+          </div>
+          <!-- Rifle Office -->
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
+            <div class="card h-100 shadow-sm">
+              <div class="ratio ratio-4x3">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3096.8234!2d-107.7831!3d39.5347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8741489f1d7c7f7d%3A0x123456780!2s111%20E%203rd%20St%2C%20Rifle%2C%20CO%2081650!5e0!3m2!1sen!2sus!4v1234567890"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                >
+                </iframe>
+              </div>
+              <div class="card-body text-center">
+                <h4 class="card-title">Rifle Office</h4>
+                <p class="card-text">
+                  111 East Third Street, Unit 219<br />
+                  Rifle, CO 81650
+                </p>
+                <a
+                  href="https://maps.google.com/?q=111+East+Third+Street+Unit+219+Rifle+CO+81650"
                   target="_blank"
                   class="btn btn-outline-primary get-directions-btn"
                   >Get Directions</a
