speakers to team

--- a/attorneys.html
+++ b/attorneys.html
@@ -89,7 +89,7 @@
               <a class="nav-link" href="./index.html#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./index.html#speakers">Team</a>
+              <a class="nav-link" href="./index.html#team">Team</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./index.html#offerings">Practice </a>
@@ -815,7 +815,7 @@
                   <a href="./index.html#about">About</a>
                 </li>
                 <li>
-                  <a href="./index.html#speakers">Our Team</a>
+                  <a href="./index.html#team">Our Team</a>
                 </li>
                 <li>
                   <a href="./index.html#offerings">Our Practice</a>
