--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#speakers">Team</a>
+              <a class="nav-link" href="#team">Team</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#offerings">Practice </a>
@@ -262,9 +262,9 @@
         </div>
       </div>
     </section>
-    <!-- legal team - speakers -->
+    <!-- legal team -->
 
-    <section id="speakers" class="section-padding">
+    <section id="team" class="section-padding">
       <div class="container">
         <!-- title row -->
         <div class="row">
@@ -1290,7 +1290,7 @@
                   <a href="#about">About</a>
                 </li>
                 <li>
-                  <a href="#speakers">Our Team</a>
+                  <a href="#team">Our Team</a>
                 </li>
                 <li>
                   <a href="#offerings">Our Practice</a>
