offerngs to practice

--- a/attorneys.html
+++ b/attorneys.html
@@ -92,7 +92,7 @@
               <a class="nav-link" href="./index.html#team">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./index.html#offerings">Practice </a>
+              <a class="nav-link" href="./index.html#practice">Practice </a>
             </li>
 
             <!-- <li class="nav-item">
@@ -818,7 +818,7 @@
                   <a href="./index.html#team">Our Team</a>
                 </li>
                 <li>
-                  <a href="./index.html#offerings">Our Practice</a>
+                  <a href="./index.html#practice">Our Practice</a>
                 </li>
                 <li>
                   <a href="./privacy.html">Privacy Policy</a>
