--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <a class="nav-link" href="#team">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#offerings">Practice </a>
+              <a class="nav-link" href="#practice">Practice </a>
             </li>
 
             <!-- <li class="nav-item">
@@ -465,8 +465,8 @@
       </div> -->
     </section>
 
-    <!-- areas of practice - offerings -->
-    <section id="offerings" class="section-padding border-top">
+    <!-- areas of practice -->
+    <section id="practice" class="section-padding border-top">
       <div class="container">
         <div class="row">
           <div
@@ -1293,7 +1293,7 @@
                   <a href="#team">Our Team</a>
                 </li>
                 <li>
-                  <a href="#offerings">Our Practice</a>
+                  <a href="#practice">Our Practice</a>
                 </li>
                 <li>
                   <a href="./privacy.html">Privacy Policy</a>
