css fix and zoe span update

--- a/attorneys.html
+++ b/attorneys.html
@@ -635,7 +635,7 @@
                     media="(max-width: 799px)"
                     srcset="./assets/images/shortspan-zoe.png"
                   />
-                  <img src="./assets/images/zoe-span.jpg" alt="Zoe Span" />
+                  <img src="./assets/images/zoe-span2.jpg" alt="Zoe Span" />
                 </picture>
               </div>
             </div>
