--- a/attorneys.html
+++ b/attorneys.html
@@ -635,7 +635,7 @@
                     media="(max-width: 799px)"
                     srcset="./assets/images/shortspan-zoe.png"
                   />
-                  <img src="./assets/images/zoe-span2.jpg" alt="Zoe Span" />
+                  <img src="./assets/images/zoe-span2.png" alt="Zoe Span" />
                 </picture>
               </div>
             </div>
@@ -648,7 +648,28 @@
           data-aos="fade-down"
           data-aos-delay="150"
         >
-          <p>Coming soon.</p>
+          <p>
+            Zoe started as one of the firm’s paralegals and has recently been
+            certified as a Licensed Legal Paraprofessional. Though Zoe works in
+            all areas of practice, her main practice area is Family Law. She is
+            a critical member of our Legal Team who has a keen eye and natural
+            ability to identify and analyze important facts, evidence, legal
+            issues. Zoe works with efficiency and is dedicated to ensuring that
+            our team and clients are prepared and equipped to achieve
+            resolution, whether through a negotiated settlement or court
+            hearing. Zoe provides great care and understanding to our clients
+            who enjoy working with her and know that she is invested in their
+            individual cases and successes. Zoe began working as a paralegal
+            with our attorneys in early 2022. Prior to working as a paralegal,
+            Zoe held the positions of both Account Clerk and Court Clerk for the
+            Garfield County Combined Courts. During her time as a clerk, Zoe
+            gained intimate familiarity with the court’s documentation and
+            filing processes, and she was responsible for managing and balancing
+            the court’s registry account for the entire Ninth Judicial District.
+            Zoe is a native of the Roaring Fork Valley, and in combination with
+            her background as a court clerk, her knowledge and resourcefulness
+            are great assets to our firm and clients.
+          </p>
         </div>
 
         <!-- header -->
